# llvm-profparser

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  coverage.yml
src/: hash_table.rs
src/coverage/: coverage_mapping.rs  mod.rs
src/instrumentation_profile/: indexed_profile.rs  mod.rs  raw_profile.rs  text_profile.rs  types.rs
tests/: README.md  cov.rs  export-llvm.sh  profdata.rs  samples.txt  upstream-failures.txt
tests/data/profdata/misc/: ferrocene-library-aarch64-apple-darwin.profdata
