[package]
name = "llvm_profparser"
version = "0.9.1"
authors = ["xd009642 <danielmckenna93@gmail.com>"]
description = "Parsing and interpretation of llvm coverage profiles and generated data"
repository = "https://github.com/xd009642/llvm-profparser"
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
categories = ["encoding"]
keywords = ["coverage", "llvm"]
exclude = ["tests/*", ".github/*", "benches/*"]
rust-version = "1.80.0"

[features]
default = ["cli", "__llvm_20"]
cli = ["clap", "tracing-subscriber"]

# for testing
# to run all tests, run `cargo test --all-features`.
# to run a specific version, run `cargo test --no-default-features --featurs __llvm_XX`.
# by default, only runs tests again llvm 20
__llvm_11 = []
__llvm_12 = []
__llvm_13 = []
__llvm_14 = []
__llvm_15 = []
__llvm_16 = []
__llvm_17 = []
__llvm_18 = []
__llvm_19 = []
__llvm_20 = []
__llvm_21 = []

[dependencies]
anyhow = "1.0.65"
flate2 = "1.0"
indexmap = "~1.8"
leb128 = "0.2.4"
md5 = "0.7"
nom = "7.0.0"
object = "0.26.0"
rustc-hash = "2.1"
clap = { version = "4", features = ["derive"], optional = true }
thiserror = "1.0.30"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", optional = true }

[dev-dependencies]
assert_cmd = "2"
cargo_metadata = "0.14.2"
cfg-if = "1.0.0"
criterion = { version = "0.3.5", features = ["html_reports"] }
pretty_assertions = "0.7"
regex = "1.5.6"
serde = { version = "1.0.165", features = ["derive"] }
serde_yaml = "0.9.22"

[[bin]]
name = "profparser"
required-features = ["cli"]

[[bin]]
name = "cov"
required-features = ["cli"]

[[bench]]
name =  "profraw_parsing"
harness = false
path = "benches/profraw_parsing.rs"

[[bench]]
name =  "profdata_parsing"
harness = false
path = "benches/profdata_parsing.rs"

[[bench]]
name =  "report_merging"
harness = false
path = "benches/report_merging.rs"

[[bench]]
name = "coverage_mapping"
harness = false
path = "benches/coverage_mapping.rs"

[lints.rust]
unexpected_cfgs = { level = "allow"  }

[profile.release]
debug = true
